# flash-attention

./: .gitignore  CMakeLists.txt
benchmark/: README.md
benchmark/api/: __init__.py  collect.py  runner.py  schema.py
benchmark/cpp/: CMakeLists.txt  benchmark.cu  benchmark_v6.cu  correctness.cu  correctness_v4.cu  correctness_v5.cu  correctness_v6.cu
benchmark/cpp/include/: perf_metrics.cuh  test_configs.h
benchmark/python/: benchmark_official_flashattn.py  benchmark_pybind.py  input_data.py  trition_ops.py
benchmark/python/tests/: test_pybind_correctness.py  test_pybind_interface.py  test_pybind_vs_official_correctness.py
python/: reference.py  test_flash_attn.py
python/flash_attention_runtime/: __init__.py  _ext.cu
scripts/: auto_profile.sh  local_config.example  local_perf_gate.example  merge_bench_csv.py  remote_config.example  run_compare_official_correctness.sh  run_correctness_gate.sh  run_local_perf_gate.sh  run_python_benchmarks.sh  smoke_python_bench.sh
scripts/local/: autotune_blockm.sh  autotune_blockn.sh  autotune_warps.sh  run.sh
scripts/remote/: run.sh
src/benchmark/: perf_metrics.cuh
src/common/: common.h
src/config/: config.cuh  macros.cuh
src/container/: tuple.cuh
src/forward/: forward.h  forward_v1_naive.h  forward_v2_float4_double_buffer_prefetch.h  forward_v3_layout.cuh  forward_v3_tensor_core.cuh  forward_v4_mma.cuh  forward_v5_mma.cuh  forward_v6_mma.cuh
src/layout/: composedLayout.h  coordinate.h  layout.h  offset.cuh  shape.h  stride.cuh
src/loadstore/: copy.h  copy_atom.cuh  copy_gsm.cuh  copy_gsm_direct.cuh  copy_rsm.cuh  copy_sgm.cuh  copy_srm.cuh  copy_srm_direct.cuh  load_func.cuh  store_func.cuh  thread_map.cuh
src/numeric/: Int.cuh  real.h
src/ptx/: copy.cuh  mma_atom.cuh  ptx.cuh
src/softmax/: online_softmax.cuh
src/tensor_core/: accum_layout_traits.cuh  fragment.cuh  ldmatrix_traits.cuh  swizzle.cuh  tensor.cuh
src/utils/: print.h  util_func.cuh
tests/: README.md  profile_kernel.cu  test_flash_attention.cu  test_forward_v3_correctness.cu  test_fragment_layout.cu
tests/container/: test_tuple.cpp
tests/layout/: test_ComposedLayout.cpp  test_divide.cpp  test_layout.cpp  test_shape.cpp
tests/loadstore/: test_copy_atom.cu  test_copy_srm.cu
tests/ptx/: test_mma_fragment.cu  test_ptx.cu
tests/unit/config/: test_config_layout.cu
tests/unit/layout/: test_ComposedLayout.cpp  test_divide.cpp  test_fragment_layout.cu  test_layout.cpp  test_shape.cpp  test_tile_to_shape_runtime.cu
tests/unit/loadstore/: test_copy_atom.cu  test_copy_gsm.cu  test_copy_gsm_tile_shapes.cu  test_copy_gsm_v3_bounds.cu  test_copy_srm.cu  test_thread_slice.cu
tests/unit/ptx/: test_mma_fragment.cu  test_ptx.cu
tests/unit/tensor/: test_tensor.cu
utils/: get_gpu_hardware_param.cu
